--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ subtitle                 : # site tagline that appears below site title in masth
 name                     : "JUNSUNG KIM"
 description              : "website for Python."
 url                      : "https://Coreenee.github.io"
-baseurl                  : "-python"
+baseurl                  : "" #"-python"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
