--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "JUNSUNG KIM"
 description              : "website for Python."
-url                      : "https://Coreenee.github.io"
+url                      : "https://coreenee.github.io"
 baseurl                  : "" #"-python"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
