--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-title: Python
+title: Python 뿌셔버리기
 tagline: Python with Coreenee
 url: https://coreenee.github.io
-paginate: 10
+paginate: 1
 baseurl: ""
 permalink: pretty
 
