--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ sass:
 # Specify the author for blog posts
 author:
   name: JUNSUNG KIM
-  url: not
+  url: https://coreenee.github.io
   email: kkim509@naver.com
 
 # Custom vars
