--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Setup
-title: Python 뿌셔버리기
+title: 새로운 알고리즘 블로그 (여기 클릭)
 tagline: Python with Coreenee
-url: https://coreenee.github.io
-paginate: 1
+url: https://deveryday.github.io/
+paginate: 10
 baseurl: ""
 permalink: pretty
 
