--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
-title: 새로운 알고리즘 블로그 (여기 클릭)
+title: 파이썬으로 부시자!
 tagline: Python with Coreenee
-url: "https://deveryday.github.io/"
+url: "https://coreenee.github.io/"
 paginate: 1
 baseurl: ""
 permalink: pretty
